--- a/src/main/resources/templates/formLogin.html
+++ b/src/main/resources/templates/formLogin.html
@@ -2,13 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <head th:replace="fragments :: head(titulo='Login')"></head>
 
-  <body>
+  <body class="bg-light">
     <div
       class="container min-vh-100 d-flex flex-column justify-content-center align-items-center"
     >
-      <div class="card rounded-4 p-4" style="width: 100%; max-width: 420px">
+      <div
+        class="card shadow-sm rounded-4 border-0 p-4"
+        style="width: 100%; max-width: 420px"
+      >
         <div class="text-center mb-4">
-          <h2 class="fw-bold">Iniciar sesión</h2>
+          <h2 class="fw-semibold text-primary">Iniciar sesión</h2>
+          <p class="text-muted mb-0">Accede a tu cuenta</p>
         </div>
 
         <form method="post" th:action="@{/login}" th:object="${loginData}">
@@ -39,20 +43,26 @@
           </div>
 
           <div class="d-grid mb-3">
-            <button type="submit" class="btn btn-primary">Ingresar</button>
+            <button
+              type="submit"
+              class="btn btn-primary w-100 rounded-pill shadow-sm"
+            >
+              <i class="bi bi-box-arrow-in-right me-2"></i> Ingresar
+            </button>
           </div>
 
-          <div class="text-center">
-            <a class="text-decoration-none" href="/registro"
-              >¿No tienes cuenta? Regístrate</a
+          <div class="text-center mt-2">
+            <a class="text-decoration-none text-secondary" href="/registro"
+              >¿No tienes cuenta? <strong>Regístrate</strong></a
             >
           </div>
 
-          <div class="text-center">
-            <a class="text-decoration-none" href="/nosotros"
+          <div class="text-center mt-1">
+            <a class="text-decoration-none text-secondary" href="/nosotros"
               >Acerca de nosotros</a
             >
           </div>
+
           <div
             th:if="${error != null}"
             class="alert alert-danger mt-3 text-center"
@@ -63,5 +73,10 @@
     </div>
 
     <div th:replace="fragments::javascript"></div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+    />
   </body>
 </html>
