--- a/src/main/resources/templates/formEditarTarea.html
+++ b/src/main/resources/templates/formEditarTarea.html
@@ -72,16 +72,17 @@
                 >
               </div>
             </div>
-            <a
+            <button
+              type="button"
               class="btn btn-outline-danger w-100 mt-2 rounded-pill shadow-sm"
-              href="/logout"
+              data-bs-toggle="modal"
+              data-bs-target="#logoutModal"
             >
               <i class="bi bi-box-arrow-right me-2"></i> Salir
-            </a>
+            </button>
           </div>
         </aside>
 
-        <!-- Main content -->
         <main class="col-12 col-md-9 col-lg-10 p-4">
           <h2 th:text="'Modificación de la tarea ' + ${tarea.id}"></h2>
 
@@ -117,7 +118,41 @@
       </div>
     </div>
 
-    <!-- Bootstrap Icons -->
+    <div
+      class="modal fade"
+      id="logoutModal"
+      tabindex="-1"
+      aria-labelledby="logoutModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="logoutModalLabel">Confirmar salida</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Cerrar"
+            ></button>
+          </div>
+          <div class="modal-body">
+            ¿Estás seguro/a de que quieres cerrar sesión?
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancelar
+            </button>
+            <a href="/logout" class="btn btn-danger">Cerrar sesión</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
