Cambio de about us como requisito de la practica

--- a/src/main/resources/templates/acercaDeNosotros.html
+++ b/src/main/resources/templates/acercaDeNosotros.html
@@ -5,7 +5,7 @@
     <div class="container py-5">
       <div class="text-center mb-5">
         <h1 class="fw-bold text-danger">Escuela Politécnica Nacional</h1>
-        <h4 class="text-primary">Aplicación de Gestión de Tareas</h4>
+        <h4 class="text-primary">Proyecto: todolist-equipo-02</h4>
         <hr class="w-50 mx-auto" />
       </div>
 
@@ -49,7 +49,7 @@
       </div>
 
       <div class="text-center mb-4">
-        <h2 class="fw-semibold text-dark">Anderson Daniel Cango Samuisa</h2>
+        <h2 class="fw-semibold text-dark">Anderson Daniel Cango Samuisa/Dylan Jhossue Granizo Ayala</h2>
         <h5 class="text-secondary">
           Metodologías Ágiles - Ingeniería en Software
         </h5>
